--- a/index.html
+++ b/index.html
@@ -84,18 +84,268 @@
                                     <i class="uil uil-github-alt"></i>
                                 </a>
                             </div>
+                            
+                            <div class="home__img">
+                                <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <mask id="mask0" mask-type="alpha">
+                                        <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                                        130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                                        97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                                        0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                                    </mask>
+                                    <g mask="url(#mask0)">
+                                        <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                                        165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                                        129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                                        -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+
+                                        <image class="home__blob-img" x=12 y=18 href="assets/img/perfil2.png"/>
+                                    </g>
+                                </svg>
+                            </div>
+
+                            <div class="home__data">
+                                <h1 class="home__title">Hi, I'am André</h1>
+                                <h3 class="home__subtitle">Frontend Developer</h3>
+                                <p class="home__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis mattis odio at vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nibh nibh, condimentum et sem vel, venenatis porttitor quam. Donec ut tempor tellus. Phasellus quis rhoncus velit. Nullam consequat varius ligula id aliquam.</p>
+                                <a href="#contact" class="button button--flex">
+                                    Contact Me<i class="uil uil-message button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="home__scroll">
+                            <a href="#about" class="home__scroll-button button--flex">
+                                <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+                                <span class="home__scroll-name">Scroll down</span>
+                                <i class="uil uil-arrow-down home__scroll-arrow"></i>
+                            </a>
                         </div>
                     </div>
                 </section>
 
                 <!--==================== ABOUT ====================-->
+                <section class="about section" id="about">
+                    <h2 class="section__title">About Me</h2>
+                    <span class="section__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum tellus a lectus pharetra cursus. Integer ante sapien, efficitur gravida nisl et, laoreet fermentum lorem. Mauris vulputate, mauris eget congue porttitor, lorem libero rhoncus dui, elementum finibus risus neque nec diam. Nunc consectetur orci massa, id luctus justo malesuada at. Morbi eleifend lorem et malesuada auctor. Fusce convallis sit amet leo sit amet dictum. Suspendisse potenti. Suspendisse porttitor commodo dui quis sodales. Ut non eleifend nunc. Donec commodo neque tellus, eu feugiat sapien lobortis eu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ultrices lacus a purus pretium lobortis.</span>
 
+                    <div class="about__container container grid">
+                        <img src="assets/img/perfil.jpg" alt="" class="about__img">
+
+                        <div class="about__data">
+                            <p class="about__description">Cras ultrices venenatis massa quis pulvinar. Nulla volutpat mattis tellus, eu mattis ex porttitor non. Aliquam at convallis justo. Phasellus ipsum magna, convallis a volutpat ut, vehicula nec ex. Proin vestibulum mauris at ligula semper, ut ornare neque pretium. Nam non nisl nec arcu molestie vehicula eget sit amet massa.</p>
+
+                            <div class="about__info">
+                                <div>
+                                    <span class="about__info-title">08+</span>
+                                    <span class="about__info-name">Years <br> experience</span>
+                                </div>
+
+                                <div>
+                                    <span class="about__info-title">20+</span>
+                                    <span class="about__info-name">Completed <br> project</span>
+                                </div>
+
+                                <div>
+                                    <span class="about__info-title">05+</span>
+                                    <span class="about__info-name">Companies <br> worked</span>
+                                </div>
+                            </div>
+
+                            <div class="about__buttons">
+                                <a download="" href="assets/pdf/Andre-Cv.pdf" class="button button--flex">
+                                    Download CV<i class="uil uil-download-alt button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!--==================== SKILLS ====================-->
+                <section class="skills section" id="skills">
+                    <h2 class="section__title"></h2>
+                    <span class="section__subtitle">My technical level</span>
 
+                    <div class="skills__container container grid">
+                        <div>
+                            <!--==================== SKILLS 1 ====================-->
+                            <div class="skills__content skills__open">
+                                <div class="skills__header">
+                                    <i class="uil uil-brackets-curly skills__icon"></i>
+
+                                    <div>
+                                        <h1 class="skills__title">Frontend Developer</h1>
+                                        <span class="skills__subtitle">More than 4 years</span>
+                                    </div>
+
+                                    <i class="uil uil-angle-down skills__arrow"></i>
+                                </div>
+
+                                <div class="skills__list grid">
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">HTML</h3>
+                                            <span class="skills__number">90%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__html"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">CSS</h3>
+                                            <span class="skills__number">80%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__css"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">JavaScript</h3>
+                                            <span class="skills__number">60%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__javascript"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">React</h3>
+                                            <span class="skills__number">85%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__react"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--==================== SKILLS 2 ====================-->
+                            <div class="skills__content skills__close">
+                                <div class="skills__header">
+                                    <i class="uil uil-server-network skills__icon"></i>
+
+                                    <div>
+                                        <h1 class="skills__title">Backend Developer</h1>
+                                        <span class="skills__subtitle">More than 2 years</span>
+                                    </div>
+
+                                    <i class="uil uil-angle-down skills__arrow"></i>
+                                </div>
+
+                                <div class="skills__list grid">
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">PHP</h3>
+                                            <span class="skills__number">90%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__php"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Node Js</h3>
+                                            <span class="skills__number">80%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__node"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">FireBase</h3>
+                                            <span class="skills__number">60%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__firebase"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Python</h3>
+                                            <span class="skills__number">85%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__python"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div>
+                            <!--==================== SKILLS 3 ====================-->
+                            <div class="skills__content skills__close">
+                                <div class="skills__header">
+                                    <i class="uil uil-swatchbook skills__icon"></i>
+
+                                    <div>
+                                        <h1 class="skills__title">Designer</h1>
+                                        <span class="skills__subtitle">More than 5 years</span>
+                                    </div>
+
+                                    <i class="uil uil-angle-down skills__arrow"></i>
+                                </div>
+
+                                <div class="skills__list grid">
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Figma</h3>
+                                            <span class="skills__number">90%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__figma"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Sketch</h3>
+                                            <span class="skills__number">80%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__sketch"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Photoshop</h3>
+                                            <span class="skills__number">60%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__photoshop"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Illustrator</h3>
+                                            <span class="skills__number">85%</span>
+                                        </div>
+                                        <div class="skills__bar">
+                                            <span class="skills__percentage skills__illustrator"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
                 <!--==================== QUALIFICATION ====================-->
-
+                <section class="qualification section">
+                    <h2 class="section__title">Qualification</h2>
+                    <span class="section__subtitle">My personal journey</span>
+                </section>
 
                 <!--==================== SERVICES ====================-->
 
