--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                     </div>
 
                     <div class="nav__btns">
+                        <!-- Theme change button -->
+                        <i class="uil uil-moon change-theme" id="theme-button"></i>
+
                         <div class="nav__toggle" id="nav-toggle">
                             <i class="uil uil-apps"></i>
                         </div>
@@ -107,7 +110,7 @@
                             <div class="home__data">
                                 <h1 class="home__title">Hi, I'am Alexa</h1>
                                 <h3 class="home__subtitle">Frontend Developer</h3>
-                                <p class="home__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mattis mattis odio at vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nibh nibh, condimentum et sem vel, venenatis porttitor quam. Donec ut tempor tellus. Phasellus quis rhoncus velit. Nullam consequat varius ligula id aliquam.</p>
+                                <p class="home__description">High level experience in web design and development knowledge, producing quality work.</p>
                                 <a href="#contact" class="button button--flex">
                                     Contact Me<i class="uil uil-message button__icon"></i>
                                 </a>
@@ -127,7 +130,7 @@
                 <!--==================== ABOUT ====================-->
                 <section class="about section" id="about">
                     <h2 class="section__title">About Me</h2>
-                    <span class="section__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum tellus a lectus pharetra cursus. Integer ante sapien, efficitur gravida nisl et, laoreet fermentum lorem. Mauris vulputate, mauris eget congue porttitor, lorem libero rhoncus dui, elementum finibus risus neque nec diam. Nunc consectetur orci massa, id luctus justo malesuada at. Morbi eleifend lorem et malesuada auctor. Fusce convallis sit amet leo sit amet dictum. Suspendisse potenti. Suspendisse porttitor commodo dui quis sodales. Ut non eleifend nunc. Donec commodo neque tellus, eu feugiat sapien lobortis eu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ultrices lacus a purus pretium lobortis.</span>
+                    <span class="section__subtitle">Web developer, with extensive knowledge and years of experience, working in web technologies and Ui/Ux design, delivering quality work.</span>
 
                     <div class="about__container container grid">
                         <img src="assets/img/about.jpg" alt="" class="about__img">
